Merged revisions 16636,16644 via svnmerge from https://svn.jboss.org/repos/jbossws/stack/cxf/trunk
........
  r16636 | richard.opalka@jboss.com | 2012-08-21 15:24:33 +0200 (Tue, 21 Aug 2012) | 1 line
  
  [JBWS-3537] Upgrade netty 3.2.6 -> 3.4.5
........
  r16644 | richard.opalka@jboss.com | 2012-08-27 11:14:02 +0200 (Mon, 27 Aug 2012) | 1 line
  
  [JBWS-3532] fixing WSDL file publishing when path contains white spaces
........